# PAOO

./: ALL_BUILD.vcxproj  CMakeLists.txt  PAOO_Project.sln  README.md  ZERO_CHECK.vcxproj.filters  paoo_demo.vcxproj.filters
include/: DynamicArray.h
paoo_demo.dir/Debug/: paoo_demo.exe.recipe
paoo_demo.dir/Debug/paoo_demo.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog
src/: DynamicArray.cpp  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
